Refactor index.html structure and content

--- a/index.html
+++ b/index.html
@@ -1,48 +1,26 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>PathLift | Free Adult Learning</title>
-  <link rel="stylesheet" href="assets/styles.css" />
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>PathLift</title>
+  <link rel="stylesheet" href="styles.css" />
 </head>
+
 <body>
-  <header class="header">
-    <div class="container nav">
-      <a class="brand" href="index.html">
-        <span class="brand-logo"></span>
-        <span class="brand-name">PathLift</span>
-      </a>
-      <nav>
-        <div class="nav-links">
-          <a href="about.html">About</a>
-          <a href="curriculum.html">Curriculum</a>
-          <a href="employers.html">Employers</a>
-          <a href="faq.html">FAQ</a>
-          <a href="contact.html">Contact</a>
-          <a href="join.html" class="btn">Join</a>
-        </div>
-      </nav>
-    </div>
-  </header>
+  <div class="container home-container">
+    <h1>Welcome to PathLift</h1>
+    <p>Your personal learning journey starts here.</p>
 
-  <main class="hero">
-    <div class="container">
-      <h1>Skills that open doors. Support that respects you.</h1>
-      <p class="muted">Free, flexible learning for adults rebuilding their lives and careers.</p>
-      <div class="space-md">
-        <a class="btn" href="join.html">Start Learning</a>
-        <a class="btn secondary" href="curriculum.html">Explore Curriculum</a>
-      </div>
-    </div>
-  </main>
+    <div class="home-buttons">
+      <button onclick="location.href='learn.html'" class="home-btn">
+        📘 Start Learning
+      </button>
 
-  <footer class="footer">
-    <div class="container footer-inner">
-      <div><strong>PathLift</strong><p class="muted">Free adult learning.</p></div>
-      <div><a href="faq.html">FAQ</a></div>
-      <div><a href="contact.html">Contact</a></div>
+      <button onclick="location.href='profile.html'" class="home-btn">
+        📊 View Progress
+      </button>
     </div>
-  </footer>
+  </div>
 </body>
 </html>
