--- a/quiz.html
+++ b/quiz.html
@@ -30,8 +30,8 @@
     <div id="result"></div>
   </div>
 
-  <!-- IMPORTANT: quiz-data.js MUST be loaded BEFORE this script -->
-  <script src="quiz-data.js"></script>
+  <!-- IMPORTANT: Load the updated JS file -->
+  <script src="./quiz-data-v2.js"></script>
 
   <script>
     (function () {
@@ -50,9 +50,9 @@
         quizContainer.classList.add("hidden");
       }
 
-      // 1. Validate that QUIZZES exists and is usable
+      // Validate QUIZZES
       if (typeof QUIZZES === "undefined" || QUIZZES === null || typeof QUIZZES !== "object") {
-        showError("Quiz data file (quiz-data.js) did not load or QUIZZES is not defined.");
+        showError("Quiz data file (quiz-data-v2.js) did not load or QUIZZES is not defined.");
         return;
       }
 
@@ -62,7 +62,7 @@
         return;
       }
 
-      // 2. Populate track dropdown
+      // Populate dropdown
       tracks.forEach((key) => {
         const opt = document.createElement("option");
         opt.value = key;
